--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.DesignDemo">
 
-        <activity android:name="com.support.android.songsdownloader.MainActivity">
+        <activity android:name="com.support.android.songsdownloader.MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -39,6 +40,12 @@
         </activity>
 
         <activity android:name="com.support.android.songsdownloader.CheeseDetailActivity"
+            android:parentActivityName="com.support.android.songsdownloader.MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.songsdownloader.MainActivity" />
+        </activity>
+
+        <activity android:name="com.support.android.songsdownloader.MovieDetailActivity"
             android:parentActivityName="com.support.android.songsdownloader.MainActivity">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.support.android.songsdownloader.MainActivity" />
