--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.support.android.songsdownloader"
@@ -24,11 +24,16 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+
     compile files('libs/jsoup-1.8.3.jar')
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.mani:ThinDownloadManager:1.2.0'
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
