--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2015 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,51 +13,125 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.support.android.songsdownloader">
+    package="com.support.android.tinyplayer"
+    android:versionCode="2"
+    android:versionName="2.0">
 
+    <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Permission: Allow application to write to SDCard -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MusicPlayerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.DesignDemo">
-
-        <activity android:name="com.support.android.songsdownloader.MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
+        <activity
+            android:name=".SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name="com.support.android.songsdownloader.CheeseDetailActivity"
-            android:parentActivityName="com.support.android.songsdownloader.MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.support.android.songsdownloader.MainActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="audio/*" />
+                <data android:mimeType="application/ogg" />
+                <data android:mimeType="application/x-ogg" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MovieDetailActivity"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
         </activity>
 
-        <activity android:name="com.support.android.songsdownloader.MovieDetailActivity"
-            android:parentActivityName="com.support.android.songsdownloader.MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.support.android.songsdownloader.MainActivity" />
+        <activity
+            android:name=".AboutMeActitvity"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
         </activity>
 
-        <activity android:name="com.support.android.songsdownloader.DownloadsLists"
-            android:parentActivityName="com.support.android.songsdownloader.MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.support.android.songsdownloader.MainActivity" />
+        <activity
+            android:name=".MovieDetailActivityLyrics"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
         </activity>
 
-        <service android:name="com.support.android.songsdownloader.MyIntentService"></service>
+        <service android:name=".MyIntentService" />
+        <service android:name=".MusicServiceTinyPlayer" />
+        <!-- <service android:name=".PodcastEpisodeDownloaderService" /> -->
+        <receiver android:name=".MusicServiceTinyPlayer$MediaButtonReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
 
+        <activity
+            android:name=".TempActivity"
+            android:label="@string/title_activity_temp"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DesignDemo">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
+        </activity>
+        <activity
+            android:name=".EditTag"
+            android:label="@string/title_activity_edit_tag"
+            android:theme="@style/Theme.DesignDemo"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
+        </activity>
+        <activity
+            android:name=".BaseActivity"
+            android:label="@string/title_activity_base"
+            android:theme="@style/Theme.DesignDemo"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".NowPlaying"
+            android:label="@string/title_activity_now_playing"
+            android:screenOrientation="portrait"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.support.android.tinyplayer.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
