--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+
+
+
+        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.google.gms:google-services:1.5.0-beta2'
+
     }
 }
 
