--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
 
 
 
-        classpath 'com.android.tools.build:gradle:1.5.0'
-        classpath 'com.google.gms:google-services:1.5.0-beta2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.google.gms:google-services:3.0.0'
 
     }
 }
